--- a/searchHospital/src/main/webapp/resources/scss/_contact.scss
+++ b/searchHospital/src/main/webapp/resources/scss/_contact.scss
@@ -9,8 +9,7 @@ section#contact {
   }
   .form-group {
     margin-bottom: 25px;
-    input,
-    textarea {
+    input.textarea {
       padding: 20px;
     }
     input.form-control {
