--- a/searchHospital/src/main/webapp/resources/css/agency.css
+++ b/searchHospital/src/main/webapp/resources/css/agency.css
@@ -342,9 +342,9 @@ header.masthead.intro-text.intro-heading {
 .pop-layer {
   display: none;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 410px;
+  top: 20%;
+  left: 20%;
+  width: 50vw;
   height: auto;
   background-color: #fff;
   border: 5px solid #3571B5;
